# esp32c3-direct-boot-example

./: README.md  gdbinit  toolchain-rv32.cmake  utils.cmake
.github/workflows/: build.yml
common/: CMakeLists.txt  start.S  syscalls.c  vectors.S
examples/blink/: CMakeLists.txt  README.md  blink.c  gdbinit
examples/blink/hal/: CMakeLists.txt  README.md  sdkconfig.h.in
examples/hello_world/: CMakeLists.txt  README.md  gdbinit  hello_world.c
hal/: CMakeLists.txt  README.md
ld/: common.ld
ld/esp32c3/: common.ld  memory.ld  romfuncs.ld
ld/esp32h2/: common.ld  memory.ld  romfuncs.ld
